# matrix.io

./: .gitignore  CMakeLists.txt  Makefile  README.md  array_dtof.c  array_dtof.h  array_ftod.c  array_ftod.h  matrixio_array.c  matrixio_array.h  matrixio_base.h  matrixio_crs.c  matrixio_crs.h  matrixio_ndarray.c  matrixio_ndarray.h  print_array.c  print_crs.c  test.c  utils.c  utils.h
checks/: matrixio_checks.cpp  matrixio_checks.h
cmake/: FindParMETIS.cmake  matrixioConfig.cmake.in
data/test/: lhs.colindex.raw  lhs.rowindex.raw  lhs.value.raw
drivers/: partition_crs.c  print_array.c  print_crs.c  reorder_crs.c  test.c  test_mpi.c
graphs/: matrixio_parmetis.c  matrixio_parmetis.h
python/: crs_to_metis_graph.py  is_symmetric.py  nnz.py  rgather.py
scripts/: dbg_attach.sh  dbg_script.sh
sorting/: sorting.cpp  sorting.h
